# EIT-hub

./: .env-default  .eslintignore  .eslintrc.js  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  radixconfig.yaml  rpi-setup  tsconfig.json
apps/shuttle/devices/Shuttle/: README.md  pyproject.toml
apps/shuttle/devices/Shuttle/shuttle/: azure_messages.py  shuttle_connector.py  shuttle_controller.py
apps/shuttle/devices/Shuttle/tests/: test_shuttle.py
backend/: auth.js  auth.test.js  azureiot.js  browser-ws.js  config.js  config.test.js  device-ws.js  express.js  index.js  package-lock.json  package.json  rtc-control.js  server.js  shuttle-control.js  shuttle-telemetry.js  video-stream.js
backend/auth/: auth-config.js  device-auth.js  user-auth.js
backend/tests/: device-auth.test.js
backend/utils/: time.js
core/client/: Network.ts  broker.test.ts  broker.ts  channel.test.ts  channel.ts  eithub.test.ts  eithub.ts  index.ts  main.ts  websocket-wrapper.ts
core/common/: message.test.ts  message.ts
core/public/: clientRequests.js  clientRequests.ts  gamepad.ts  index.html  index.js  index.ts  input.ts  inputView.ts  telemetryView.js  telemetryView.ts  websocket.ts
core/service/: Network.ts  auth.test.ts  auth.ts  azureiot.ts  browser-ws.js  browser-ws.ts  config.test.ts  config.ts  device-ws.ts  express.ts  index.ts
core/widgets/: eit-apps.html  eit-apps.ts  eit-header.html  eit-header.ts  eit-hub.html  eit-hub.ts  eit-main.html  eit-main.ts
devices/: readme.md
devices/ArduSubPilot/: README.md  pyproject.toml
devices/ArduSubPilot/ardusubpilot/: __init__.py  config.py  device_controller.py  hello.py  main.py
devices/ArduSubPilot/tests/: test_ardusubpilot.py
devices/Shuttle/: pyproject.toml
devices/Shuttle/shuttle/: __init__.py  azure_messages.py  config.py  shuttle_connector.py  shuttle_controller.py  websocket_connector.py
devices/weather_station/: README.md  requirements.txt  settings.py  weather_station.py
eit-broker/: readme.md  runbook.md  vmq.acl  vmq.passwd
eit-enviro/: Cargo.toml  readme.md
eit-enviro/src/: main.rs
eit-logger/: index.html  readme.md
experiments/: Temp-on-LCD.py  hello-git.txt  readme.md
public/: app.js  clientRequests.js  gamepad.js  index.html  index.js  input.js  inputView.js  keyboard.js  rtcConnector.js  style.css  telemetryView.js  videoView.js  websocket.js
(+122 files in other folders)
