[tool.poetry]
name = "Shuttle"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
keyboard_control = "shuttle.shuttle_controller:keyboard_control"
test = "shuttle.shuttle_controller:quick_test"

[tool.poetry.dependencies]
python = "^3.8"
pymavlink = "^2.4.9"
python-dotenv = "^0.13.0"
websockets = "^8.1"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
