[tool.poetry]
name = "Shuttle"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
test = "shuttle.shuttle_controller:quick_test"
websocket_control = "shuttle.shuttle_controller:control_over_websocket"
fake = "shuttle.shuttle_controller:fake_test"

[tool.poetry.dependencies]
python = "^3.8"
pymavlink = "^2.4.9"
python-dotenv = "^0.13.0"
websockets = "^8.1"
asyncio = "^3.4.3"
azure-iot-device = "^2.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
